[gd_scene load_steps=9 format=3 uid="uid://bwyuji114rt1d"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_xvbwn"]
[ext_resource type="Script" uid="uid://crthn4q8l0of0" path="res://ui/promotion/promotion.gd" id="2_u5ybe"]
[ext_resource type="Texture2D" uid="uid://dtv3rkdbibbfa" path="res://resources/sprites/units/axe_armor.png" id="3_kvcgl"]
[ext_resource type="PackedScene" uid="uid://di7v11sroksay" path="res://unit drafting/Unit_Commander Draft/weapon_trait_icon_container.tscn" id="3_u5ybe"]
[ext_resource type="Texture2D" uid="uid://cn5s2v2wu3fu6" path="res://resources/sprites/units/squire.png" id="5_8gl2t"]

[sub_resource type="Theme" id="Theme_kvcgl"]
default_font_size = 36

[sub_resource type="Theme" id="Theme_u5ybe"]
default_font_size = 36

[sub_resource type="Theme" id="Theme_1pwbv"]
default_font_size = 28

[node name="Promotion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xvbwn")
script = ExtResource("2_u5ybe")

[node name="PromotionOptionSelection" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 37.0
offset_top = 18.0
offset_right = 148.0
offset_bottom = 93.0

[node name="MarginContainer" type="MarginContainer" parent="PromotionOptionSelection"]
layout_mode = 2

[node name="PromotionOptionContainer" type="VBoxContainer" parent="PromotionOptionSelection/MarginContainer"]
layout_mode = 2

[node name="UnitTypeDescription" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -156.0
offset_right = -19.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UnitTypeDescription"]
layout_mode = 2

[node name="WeaponTraitIconContainer" parent="UnitTypeDescription/VBoxContainer" instance=ExtResource("3_u5ybe")]
layout_mode = 2

[node name="UnitTypeDescriptionLabel" type="Label" parent="UnitTypeDescription/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_kvcgl")
text = "Unit Type Description"

[node name="PromotionUnitIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -587.0
offset_top = -186.0
offset_right = -427.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_kvcgl")

[node name="PromotionUnitTypeLabel" type="Label" parent="PromotionUnitIcon"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -16.0
offset_bottom = 13.0
grow_horizontal = 2
theme = SubResource("Theme_u5ybe")
text = "Unit Type"
horizontal_alignment = 1

[node name="ToPromoteUnitIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 414.0
offset_right = 157.0
offset_bottom = 542.0
theme = SubResource("Theme_1pwbv")
texture = ExtResource("5_8gl2t")

[node name="ToPromoteUnitTypeLabel" type="Label" parent="ToPromoteUnitIcon"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
text = "Unit Type"

[node name="ToPromoteUnitNameLabel" type="Label" parent="ToPromoteUnitIcon"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Unit Name"
